# rust-web

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: README.md  api_client.rs  main.rs
server/: Cargo.toml  README.md  test.csv
server/migrations/2021-11-02-005435_create_logs/: up.sql
server/src/: db.rs  handlers.rs  main.rs
src/: main.rs
templates/: hello.html
tutorial/: Cargo.toml
tutorial/src/: main.rs
tutorial/static/: index.html
