[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
api = {path = "../api"}
serde_json = "1.0.69"
serde = "1.0.130"
csv = "1.1.6"
