[package]
name = "server"
version = "0.1.0"
authors = ["aoki <aoki@aoki.dev>"]
edition = "2018"


[dependencies]
api = {path = "../api"}
axum = "0.2.8"
axum-debug = "0.1.0"
axum-debug-macros = "0.1.0"
tokio = {version = "1.13.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.29"
anyhow = "1.0.44"
serde_json = "1.0.68"
